# BiC-MPPI-with-SVGD

./: CMakeLists.txt  README.md
model/: bicycle.h  manipulator_6dof.h  manipulator_7dof.h
mppi/: bi_mppi.h  bi_mppi_6dof.h  bi_mppi_7dof.h  cluster_mppi.h  collision_checker_3d.h  collision_checker_3d_6dof.h  csv.h  mppi.h  mppi_param.h  svgd_mppi.h
src/bicycle/: bi_loop.cpp  bi_mppi.cpp  cluster_mppi.cpp  cluster_mppi_loop.cpp  mppi.cpp  mppi_loop.cpp  plotting.cpp  svgd_mppi.cpp
src/manipulator/: bi_loop_6dof.cpp  bi_loop_7dof.cpp
src/quadrotor/: bi_mppi.cpp
src/wmrobot/: bi_loop.cpp  bi_mppi.cpp  cluster_mppi_loop.cpp  mppi.cpp  mppi_loop.cpp  svgd_loop.cpp  svgd_mppi.cpp
